--- a/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/dwa_local_planner.yaml
+++ b/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/dwa_local_planner.yaml
@@ -5,29 +5,25 @@ acc_lim_x: 2.5
 acc_lim_y: 2.5
 
 max_vel_x: 0.55
-# max_vel_x: 1.0
 min_vel_x: 0.0
 
-max_vel_y: 0.1
-# max_vel_y: 0.2
-min_vel_y: -0.1
+max_vel_y: 0.55
+min_vel_y: -0.55
 
 max_trans_vel: 0.55
-# max_trans_vel: 1.0
-min_trans_vel: 0.1
+min_trans_vel: 0.0
 
-# max_rot_vel: 1.0
 max_rot_vel: 1.0
-min_rot_vel: 0.4
+min_rot_vel: 0.0
 
 sim_time: 1.7
 sim_granularity: 0.025
+angular_sim_granularity: 0.025
 
 goal_distance_bias: 32.0
 path_distance_bias: 24.0
 occdist_scale: 0.01
 
-# stop_time_buffer: 0.2
 stop_time_buffer: 0.2
 oscillation_reset_dist: 0.05
 
@@ -38,9 +34,7 @@ max_scaling_factor: 0.2
 
 vx_samples: 3
 vy_samples: 10
-vtheta_samples: 20
-
-sim_period: 0.1
+vtheta_samples: 10
 
 xy_goal_tolerance: 0.2
 yaw_goal_tolerance: 0.17
