--- a/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/move_base_params.yaml
+++ b/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/move_base_params.yaml
@@ -1,6 +1,17 @@
 # this file is a copy of pr2_navigation_config/move_base/move_base_params.yaml 
 
+
+clearing_radius: 0.30
+footprint_padding: 0.015
+
+# Oscillation
+oscillation_timeout: 10.0
+oscillation_distance: 0.5
+
+# Global Planner
+planner_frequency: 0.0
+planner_patience: 5.0
+
+# Local Planner
 controller_frequency: 10.0
 controller_patience: 15.0
-clearing_radius: 0.59
-footprint_padding: 0.015
