--- a/jsk_pr2_robot/jsk_pr2_desktop/RViz.desktop.in
+++ b/jsk_pr2_robot/jsk_pr2_desktop/RViz.desktop.in
@@ -4,6 +4,6 @@ Version=1.0
 Type=Application
 Icon[ja_JP]=@PROJECT_SOURCE_DIR@/icons/RViz_@ICON_COLOR@.png
 Name[ja_JP]=RViz @PR2_NAME@
-Exec=/bin/bash -l -i -c "DISPLAY=:0.0 ROS_MASTER_URI=http://@PR2_NAME@:11311 @PROJECT_SCRIPTS_DIR@/auto_restart rosrun rviz rviz -d $(rospack find jsk_pr2_startup)/config/jsk_startup.rviz"
+Exec=/bin/bash -l -i -c "DISPLAY=:0.0 rossetip && rossetmaster @PR2_NAME@ && rosrun jsk_tools roscore_regardless.py rosrun rviz rviz -d $(rospack find jsk_pr2_startup)/config/jsk_startup.rviz"
 Name=RViz @PR2_NAME@
 Icon=@PROJECT_SOURCE_DIR@/icons/RViz_@ICON_COLOR@.png
