--- a/jsk_pr2_robot/jsk_pr2_desktop/package.xml
+++ b/jsk_pr2_robot/jsk_pr2_desktop/package.xml
@@ -15,4 +15,5 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>jsk_pr2_startup</build_depend>
   <run_depend>jsk_pr2_startup</run_depend>
+  <run_depend>jsk_tools</run_depend>
 </package>
