--- a/jsk_aero_robot/aeroeus/package.xml
+++ b/jsk_aero_robot/aeroeus/package.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0"?>
 <package>
   <name>aeroeus</name>
-  <version>0.0.0</version>
+  <version>1.1.0</version>
   <description>The aeroeus package</description>
 
   <license>BSD</license>
-  <maintainer email="sasabuchi@jsk.t.u-tokyo.ac.jp">
-    Kazuhiro Sasabuchi
+
+  <maintainer email="youhei@jsk.imi.i.u-tokyo.ac.jp">
+    Yohei Kakiuchi
   </maintainer>
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>roseus</build_depend>
+  <build_depend>pr2eus</build_depend>
 
-  <run_depend>roseus</run_depend>
+  <run_depend>pr2eus</run_depend>
 
   <export/>
 </package>
