--- a/jsk_aero_robot/aeroeus/package.xml
+++ b/jsk_aero_robot/aeroeus/package.xml
@@ -13,8 +13,10 @@
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>pr2eus</build_depend>
+  <build_depend>aero_description</build_depend>
 
   <run_depend>pr2eus</run_depend>
+  <build_depend>aero_description</build_depend>
 
   <export/>
 </package>
