--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ env:
     - ROSWS=wstool
     - BUILDER=catkin
     - USE_TRAVIS=true
+    - USE_DOCKER=true
     - ROS_PARALLEL_JOBS="-j2"
     - CATKIN_PARALLEL_JOBS="-p2"
     - ROS_PARALLEL_TEST_JOBS="-j1"
@@ -40,7 +41,6 @@ matrix:
     - env: ROS_DISTRO=indigo  USE_DEB=false EXTRA_DEB="ros-indigo-convex-decomposition ros-indigo-ivcon"
     - env: ROS_DISTRO=jade    USE_DEB=true
     - env: ROS_DISTRO=jade    USE_DEB=false EXTRA_DEB="ros-jade-convex-decomposition ros-jade-ivcon"
-    - env: ROS_DISTRO=kinetic USE_DEB=true
     - env: ROS_DISTRO=kinetic USE_DEB=false EXTRA_DEB="ros-kinetic-convex-decomposition ros-kinetic-ivcon"
 before_script:
   # to install pepper_meshes, nao_meshes, the licenses have to be accepted
