--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ env:
     - ROS_DISTRO=indigo  USE_DEB=false EXTRA_DEB="ros-indigo-convex-decomposition ros-indigo-ivcon"
     - ROS_DISTRO=jade    USE_DEB=true
     - ROS_DISTRO=jade    USE_DEB=false EXTRA_DEB="ros-jade-convex-decomposition ros-jade-ivcon"
-    - ROS_DISTRO=kinetic USE_DEB=true
+    - ROS_DISTRO=kinetic USE_DEB=false
     - ROS_DISTRO=kinetic USE_DEB=false EXTRA_DEB="ros-kinetic-convex-decomposition ros-kinetic-ivcon"
 matrix:
   fast_finish: true
@@ -42,7 +42,8 @@ matrix:
     - env: ROS_DISTRO=kinetic USE_DEB=false EXTRA_DEB="ros-kinetic-convex-decomposition ros-kinetic-ivcon"
 before_script:
   # to install pepper_meshes, nao_meshes, the licenses have to be accepted
-  - if [ "$ROS_DISTRO" == "indigo" ]; then export BEFORE_SCRIPT="echo \"ros-indigo-pepper-meshes ros-pepper-meshes/accepted-ros-pepper-meshes boolean true\" | sudo debconf-set-selections; sudo apt-get install -y -qq ros-$ROS_DISTRO-pepper-meshes"; fi
-  - if [ "$ROS_DISTRO" == "indigo" ]; then export BEFORE_SCRIPT="echo \"ros-indigo-nao-meshes ros-nao-meshes/accepted-ros-nao-meshes boolean true\" | sudo debconf-set-selections; sudo apt-get install -y -qq ros-$ROS_DISTRO-nao-meshes"; fi
+  - if [ "$ROS_DISTRO" == "indigo" ]; then export BEFORE_SCRIPT="echo 'ros-indigo-pepper-meshes ros-pepper-meshes/accepted-ros-pepper-meshes boolean true' | sudo debconf-set-selections; sudo apt-get install -y -qq ros-$ROS_DISTRO-pepper-meshes"; fi
+  - if [ "$ROS_DISTRO" == "indigo" ]; then export BEFORE_SCRIPT="$BEFORE_SCRIPT; echo 'ros-indigo-nao-meshes ros-nao-meshes/accepted-ros-nao-meshes boolean true' | sudo debconf-set-selections; sudo apt-get install -y -qq ros-$ROS_DISTRO-nao-meshes"; fi
+  - if [ "$ROS_DISTRO" == "indigo" ]; then export BEFORE_SCRIPT="$BEFORE_SCRIPT; wstool merge jsk_robot/jsk_fetch_robot/jsk_fetch_robot.rosinstall; wstool update"; fi
   - if [ "$ROS_DISTRO" == "kinetic" ]; then export BEFORE_SCRIPT="wstool merge jsk_robot/jsk_fetch_robot/jsk_fetch.rosinstall.kinetic; wstool update"; fi
 script: source .travis/travis.sh
