--- a/jsk_pr2_robot/jsk_pr2_startup/package.xml
+++ b/jsk_pr2_robot/jsk_pr2_startup/package.xml
@@ -55,12 +55,12 @@
   <run_depend>pr2_navigation_config</run_depend>
   <run_depend>pr2_navigation_global</run_depend>
   <run_depend>pr2_navigation_perception</run_depend>
-  <run_depend>pr2_navigation_self_filter</run_depend>
   <run_depend>pr2_teleop_general</run_depend>
   <run_depend>pr2_tuck_arms_action</run_depend>
   <run_depend>pr2eus</run_depend>
   <run_depend>python-numpy</run_depend>
   <run_depend>resized_image_transport</run_depend>
+  <run_depend>robot_self_filter</run_depend>
   <run_depend>rosbridge_server</run_depend>
   <run_depend>rostwitter</run_depend>
   <run_depend>roseus_mongo</run_depend>
