jsk_pr2_startup: specify prefix for laser_filters plugins

--- a/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_sensors/shadow_filter_for_gazebo.yaml
+++ b/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_sensors/shadow_filter_for_gazebo.yaml
@@ -3,7 +3,7 @@
 
 scan_filter_chain:
 - name: shadows
-  type: ScanShadowsFilter
+  type: laser_filters/ScanShadowsFilter
   params:
     min_angle: 0
     max_angle: 170
