jsk_aero_startup: set auto exposure for ps4eye

--- a/jsk_aero_robot/jsk_aero_startup/CMakeLists.txt
+++ b/jsk_aero_robot/jsk_aero_startup/CMakeLists.txt
@@ -4,7 +4,7 @@ project(jsk_aero_startup)
 find_package(catkin REQUIRED)
 catkin_package()
 
-install(DIRECTORY launch raw_maps
+install(DIRECTORY launch raw_maps scripts
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
   USE_SOURCE_PERMISSIONS)
 
