--- a/jsk_fetch_robot/jsk_fetch_startup/package.xml
+++ b/jsk_fetch_robot/jsk_fetch_startup/package.xml
@@ -11,6 +11,8 @@
   <url>http://ros.org/wiki/jsk_fetch_startup</url>
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend version_gte="0.7.11">fetch_teleop</build_depend>
+
   <run_depend>image_proc</run_depend>
   <run_depend>jsk_robot_startup</run_depend>
   <run_depend>jsk_maps</run_depend>
