add app_manager tag

--- a/jsk_fetch_robot/jsk_fetch_startup/package.xml
+++ b/jsk_fetch_robot/jsk_fetch_startup/package.xml
@@ -30,6 +30,7 @@
   <run_depend>move_base</run_depend>
 
   <!-- for fetch teleop -->
+  <run_depend>app_manager</run_depend>
   <run_depend>fetch_bringup</run_depend>
   <run_depend>safe_teleop_base</run_depend>
   <run_depend>joy</run_depend>
@@ -46,5 +47,6 @@
   <test_depend>rostest</test_depend>
 
   <export>
+    <app_manager app_dir="${prefix}/apps"/>
   </export>
 </package>
