--- a/jsk_fetch_robot/jsk_fetch_startup/package.xml
+++ b/jsk_fetch_robot/jsk_fetch_startup/package.xml
@@ -39,6 +39,10 @@
   <!-- for diagnostic aggregator -->
   <run_depend>diagnostic_aggregator</run_depend>
 
+  <!-- for fetch speech recognition -->
+  <run_depend>julius_ros</run_depend>
+  <run_depend>respeaker_ros</run_depend>
+
   <test_depend>rostest</test_depend>
 
   <export>
