--- a/jsk_robot_common/jsk_robot_startup/package.xml
+++ b/jsk_robot_common/jsk_robot_startup/package.xml
@@ -28,6 +28,7 @@
   <run_depend>nodelet</run_depend>
   <run_depend>pointcloud_to_laserscan</run_depend>
   <run_depend>posedetection_msgs</run_depend>
+  <run_depend>pr2_mechanism_controllers</run_depend>
   <run_depend>rosbridge_server</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>roseus_mongo</run_depend>
