--- a/jsk_pr2_robot/jsk_pr2_startup/package.xml
+++ b/jsk_pr2_robot/jsk_pr2_startup/package.xml
@@ -61,6 +61,7 @@
   <run_depend>pr2eus</run_depend>
   <run_depend>python-numpy</run_depend>
   <run_depend>resized_image_transport</run_depend>
+  <run_depend>respeaker_ros</run_depend>
   <run_depend>robot_self_filter</run_depend>
   <run_depend>rosbridge_server</run_depend>
   <run_depend>rostwitter</run_depend>
