jsk_pr2_startup: use 2d costmap

--- a/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/global_costmap_params.yaml
+++ b/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/global_costmap_params.yaml
@@ -1,6 +1,6 @@
 plugins:
   - {name: static_layer, type: "costmap_2d::StaticLayer" }
-  - {name: obstacle_layer, type: "costmap_2d::VoxelLayer" }
+  - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer" }
   - {name: inflation_layer,  type: "costmap_2d::InflationLayer" }
 
 footprint: [[-0.325, -0.325], [-0.425, -0.175], [-0.425, 0.175], [-0.325, 0.325], [0.325, 0.325], [0.375, 0.0], [0.325, -0.325]]
