--- a/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/local_costmap_params.yaml
+++ b/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/local_costmap_params.yaml
@@ -1,5 +1,5 @@
 plugins:
-  - {name: obstacle_layer,  type: "costmap_2d::VoxelLayer" }
+  - {name: obstacle_layer,  type: "costmap_2d::ObstacleLayer" }
   - {name: inflation_layer,  type: "costmap_2d::InflationLayer" }
 
 # copied from pr2_navigation_global/config/local_costmap_params.yaml
