enable to use diagnostic aggregator on fetch

--- a/jsk_fetch_robot/jsk_fetch_startup/package.xml
+++ b/jsk_fetch_robot/jsk_fetch_startup/package.xml
@@ -36,6 +36,9 @@
   <run_depend>topic_tools</run_depend>
   <run_depend>fetch_teleop</run_depend>
 
+  <!-- for diagnostic aggregator -->
+  <run_depend>diagnostic_aggregator</run_depend>
+
   <test_depend>rostest</test_depend>
 
   <export>
