--- a/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/safe_teleop_pr2_params.yaml
+++ b/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/safe_teleop_pr2_params.yaml
@@ -37,17 +37,29 @@ local_costmap:
   unknown_threshold: 8
   mark_threshold: 0
 
-  observation_sources: base_scan_marking base_scan tilt_scan ground_object_cloud
+  observation_sources: base_scan_filtered tilt_scan_filtered
 
-  base_scan_marking: {sensor_frame: base_laser_link, topic: /base_scan_marking, data_type: PointCloud2, expected_update_rate: 0.2,
-                      observation_persistence: 0.0, marking: true, clearing: false, min_obstacle_height: 0.08, max_obstacle_height: 2.0}
-
-  base_scan: {sensor_frame: base_laser_link, topic: /base_scan, data_type: LaserScan, expected_update_rate: 0.2,
-              observation_persistence: 0.0, marking: false, clearing: true, min_obstacle_height: -0.10, max_obstacle_height: 2.0}
-
-  tilt_scan: {sensor_frame: laser_tilt_link, topic: /tilt_scan, data_type: LaserScan, expected_update_rate: 0.2,
-              observation_persistence: 0.2, marking: false, clearing: true, min_obstacle_height: -20.00, max_obstacle_height: 40.0}
-
-  ground_object_cloud: {sensor_frame: laser_tilt_link, topic: /ground_object_cloud, data_type: PointCloud2, expected_update_rate: 0.2,
-                        observation_persistence: 4.6, marking: true, clearing: false, min_obstacle_height: -0.10, max_obstacle_height: 2.0}
-
+  base_scan_filtered:
+    sensor_frame: base_laser_link
+    topic: /base_scan_filtered
+    data_type: PointCloud2
+    expected_update_rate: 0.2
+    observation_persistence: 0.0
+    marking: true
+    clearing: true
+    min_obstacle_height: 0.25
+    max_obstacle_height: 0.35
+    obstacle_range: 5.0
+    raytrace_range: 3.0
+  tilt_scan_filtered:
+    sensor_frame: laser_tilt_link
+    topic: /tilt_scan_filtered
+    data_type: LaserScan
+    expected_update_rate: 0.25
+    observation_persistence: 2.5
+    marking: true
+    clearing: true
+    min_obstacle_height: 0.05
+    max_obstacle_height: 3.0
+    obstacle_range: 5.0
+    raytrace_range: 3.0
