--- a/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/safe_teleop_pr2_params.yaml
+++ b/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/safe_teleop_pr2_params.yaml
@@ -5,6 +5,7 @@ local_costmap:
   transform_tolerance: 0.2
   obstacle_range: 2.5
   raytrace_range: 3.0
+  footprint_clearing_enabled: true
   inflation_layer:
     inflation_radius: 0.2
   inflation_radius: 0.2
@@ -21,7 +22,7 @@ local_costmap:
   origin_x: 0.0
   origin_y: 0.0
 
-  publish_voxel_map: true
+  publish_voxel_map: false
   map_type: voxel
   obstacle_layer:
     origin_z: 0.0
@@ -44,7 +45,7 @@ local_costmap:
     topic: /base_scan_filtered
     data_type: PointCloud2
     expected_update_rate: 0.2
-    observation_persistence: 0.0
+    observation_persistence: 1.0
     marking: true
     clearing: true
     min_obstacle_height: 0.25
@@ -59,7 +60,7 @@ local_costmap:
     observation_persistence: 2.5
     marking: true
     clearing: true
-    min_obstacle_height: 0.05
-    max_obstacle_height: 3.0
+    min_obstacle_height: 0.075
+    max_obstacle_height: 2.0
     obstacle_range: 5.0
     raytrace_range: 3.0
