--- a/jsk_naoqi_robot/peppereus/pepper.yaml
+++ b/jsk_naoqi_robot/peppereus/pepper.yaml
@@ -23,6 +23,18 @@ head:
 
 angle-vector:
   reset-pose: [2, -2, -5, 85, 10, -70, -20, -40, 85, -10,  70,  20,  40, 0, -0]
+  greeting-pose: [2, -2, -5, 10, 10, -100, -70, 100, 10, -10, 100, 70, -100, 0, -10]
+  bowing-pose: [2, -2, -40, 85, 10, -70, -20, -40, 50, -1, -1, 50, 50, 0, 20]
+  spread-hands-widely: [2, -2, -5, 20, 40, -70, -20, -40, 20, -40, 70, 20, 40, 0, -15]
+  spread-hands-smally: [2, -2, -5, 20, 20, -70, -20, -40, 20, -20, 70, 20, 40, 0, -10]
+  pointing-right-pose: [2, 0, -5, 85, 10, -70, -20, -40, 50, -80, 90, 20, 90, -30, -4]
+  pointing-left-pose: [2, 0, -5, 50, 80, -90, -20, -90, 85, -10, 70, 20, 40, 30, -6]
+  raise-right-hand-high: [2, -2, -5, 85, 10, -70, -20, -40, -30, -20, 50, 50, 50, 0, -12]
+  raise-left-hand-high: [2, -2, -5, -30, 20, -50, -50, -50, 85, -10, 70, 20, 40, 0, -9]
+  raise-right-hand-low: [2, -2, -5, 85, 10, -70, -20, -40, 10, -20, 70, 80, -70, 0, -6]
+  raise-left-hand-low: [2, -2, -5, 10, 20, -70, -80, 70, 85, -10, 70, 20, 40, 0, -4]
+  wondering-pose: [2, -2, -5, 110, 30, -40, -60, -40, 110, -30, 40, 60, 40, 15, -10]
+  nodding-pose: [2, -2, -5, 110, 35, -40, -60, -40, 110, -35, 40, 60, 40, 0, 15]
 
 ## TODO: end-coords tokuni base
 ## FIXME: base_linkが浮いてる
