[peppereus] add default poses: show Pepper's sensor

--- a/jsk_naoqi_robot/peppereus/pepper.yaml
+++ b/jsk_naoqi_robot/peppereus/pepper.yaml
@@ -33,8 +33,15 @@ angle-vector:
   raise-left-hand-high: [2, -2, -5, -30, 20, -50, -50, -50, 85, -10, 70, 20, 40, 0, -9]
   raise-right-hand-low: [2, -2, -5, 85, 10, -70, -20, -40, 10, -20, 70, 80, -70, 0, -6]
   raise-left-hand-low: [2, -2, -5, 10, 20, -70, -80, 70, 85, -10, 70, 20, 40, 0, -4]
-  wondering-pose: [2, -2, -5, 110, 30, -40, -60, -40, 110, -30, 40, 60, 40, 15, -10]
+  wondering-pose: [2, -20, -5, 100, 50, -20, -80, -40, -60, -20, -10, 60, 40, -5, 0]
   nodding-pose: [2, -2, -5, 110, 35, -40, -60, -40, 110, -35, 40, 60, 40, 0, 15]
+  watching-pose: [2, -2, -5, 100, 50, -20, -80, -40, -60, -20, -10, 60, 40, 0, 0]
+  show-top-camera: [2, -2, -5, 10, 10, -60, -89.5, -40, 10, -10, 60, 89.5, 40, 0, 5]
+  show-bottom-camera: [2, -2, -5, 10, 10, -60, -89.5, -40, 10, -10, 60, 89.5, 40, 0, -35]
+  touch-speakers: [20, -2, -30, -15, 20, -70, -88, -40, -15, -20, 70, 88, 40, 0, 30]
+  look-foot: [2, -20, -20, 85, 10, -70, -20, -40, 50, -10, 70, 20, -70, -20, 20]
+  show-head: [28, 0, -57, -80, 30, -30, -89.5, -40, 85, -10, 70, 20, 40, 0, 0]
+  ok-pose: [2, -2, -5, -40, 10, -20, -70, -40, -40, -10, 20, 70, 40, 0, -20]
 
 ## TODO: end-coords tokuni base
 ## FIXME: base_linkが浮いてる
