add openni2_launch dependency

--- a/jsk_aero_robot/jsk_aero_startup/package.xml
+++ b/jsk_aero_robot/jsk_aero_startup/package.xml
@@ -24,4 +24,5 @@
   <run_depend>tf2_ros</run_depend>
   <run_depend>tf</run_depend>
   <run_depend>yocs_cmd_vel_mux</run_depend>
+  <run_depend>openni2_launch</run_depend>
 </package>
