package.xml: add naoqi_apps package to run depend

--- a/jsk_naoqi_robot/jsk_pepper_startup/package.xml
+++ b/jsk_naoqi_robot/jsk_pepper_startup/package.xml
@@ -27,6 +27,7 @@
   <run_depend>std_srvs</run_depend>
   <run_depend>teleop_twist_joy</run_depend>
   <run_depend>jsk_robot_startup</run_depend>
+  <run_depend>naoqi_apps</run_depend>
 
   <test_depend>rostest</test_depend>
   <test_depend>roslaunch</test_depend>
