fix for melodic, remove unused find_package and also support for URDFDOM

--- a/jsk_robot_common/jsk_robot_startup/CMakeLists.txt
+++ b/jsk_robot_common/jsk_robot_startup/CMakeLists.txt
@@ -22,7 +22,6 @@ else()
 endif()
 
 find_package(catkin REQUIRED COMPONENTS
-  cv_bridge
   dynamic_reconfigure
   jsk_topic_tools
   mongodb_store
@@ -70,6 +69,12 @@ target_link_libraries(jsk_robot_lifelog
   ${OpenCV_LIBRARIES}
   ${catkin_LIBRARIES})
 add_dependencies(jsk_robot_lifelog ${PROJECT_NAME}_gencpp ${PROJECT_NAME}_gencfg)
+
+find_package(PkgConfig)
+pkg_check_modules(URDFDOM REQUIRED urdfdom)
+if ("${URDFDOM_VERSION}" VERSION_EQUAL "1.0.0" OR "${URDFDOM_VERSION}" VERSION_GREATER "1.0.0")
+  add_definitions(-DURDFDOM_1_0_0_API)
+endif()
 
 add_executable(joint_states_throttle
   src/joint_states_throttle_node.cpp)
