add melodic to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,9 @@ env:
     - ROS_DISTRO=indigo  USE_DEB=false EXTRA_DEB="ros-indigo-convex-decomposition ros-indigo-ivcon"
     - ROS_DISTRO=kinetic USE_DEB=true
     - ROS_DISTRO=kinetic USE_DEB=false EXTRA_DEB="ros-kinetic-convex-decomposition ros-kinetic-ivcon"
+    - ROS_DISTRO=melodic USE_DEB=true
+    - ROS_DISTRO=melodic USE_DEB=true  TEST_PKGS="jsk_robot_startup"
+    - ROS_DISTRO=melodic USE_DEB=false
 matrix:
   fast_finish: true
   allow_failures:
@@ -36,6 +39,8 @@ matrix:
     - env: ROS_DISTRO=hydro   USE_DEB=false EXTRA_DEB="ros-hydro-convex-decomposition ros-hydro-ivcon" BUILD_PKGS="jsk_pr2_calibration jsk_robot_startup pr2_base_trajectory_action jsk_pr2_startup jsk_pr2_desktop"
     - env: ROS_DISTRO=indigo  USE_DEB=false EXTRA_DEB="ros-indigo-convex-decomposition ros-indigo-ivcon"
     - env: ROS_DISTRO=kinetic USE_DEB=true
+    - env: ROS_DISTRO=melodic USE_DEB=true
+    - env: ROS_DISTRO=melodic USE_DEB=false
 before_script:
   # to install pepper_meshes, nao_meshes, the licenses have to be accepted
   - if [ "$ROS_DISTRO" == "indigo" ]; then export BEFORE_SCRIPT="echo \"ros-indigo-pepper-meshes ros-pepper-meshes/accepted-ros-pepper-meshes boolean true\" | sudo debconf-set-selections; sudo apt-get install -y -qq ros-$ROS_DISTRO-pepper-meshes"; fi
