--- a/.travis.yml
+++ b/.travis.yml
@@ -25,10 +25,10 @@ env:
   matrix:
     - ROS_DISTRO=hydro   USE_DEB=true
     - ROS_DISTRO=hydro   USE_DEB=false EXTRA_DEB="ros-hydro-convex-decomposition ros-hydro-ivcon" BUILD_PKGS="jsk_pr2_calibration jsk_robot_startup pr2_base_trajectory_action jsk_pr2_startup jsk_pr2_desktop"
-    - ROS_DISTRO=indigo  USE_DEB=true
+    - ROS_DISTRO=indigo  USE_DEB=true  TEST_PKGS="jsk_robot_startup" # app_manager required to pass jsk_fetch test, so this job mainly test if we can build sources
     - ROS_DISTRO=indigo  USE_DEB=false EXTRA_DEB="ros-indigo-convex-decomposition ros-indigo-ivcon"
     - ROS_DISTRO=kinetic USE_DEB=true
-    - ROS_DISTRO=kinetic USE_DEB=true  TEST_PKGS="jsk_robot_startup"
+    - ROS_DISTRO=kinetic USE_DEB=true  TEST_PKGS="jsk_robot_startup" # app_manager required to pass jsk_fetch test, so this job mainly test if we can build sources
     - ROS_DISTRO=kinetic USE_DEB=false EXTRA_DEB="ros-kinetic-convex-decomposition ros-kinetic-ivcon"
     - ROS_DISTRO=melodic USE_DEB=true
     - ROS_DISTRO=melodic USE_DEB=true  TEST_PKGS="jsk_robot_startup" EXTRA_DEB="libmongoclient-dev"
@@ -38,7 +38,6 @@ matrix:
   allow_failures:
     - env: ROS_DISTRO=hydro   USE_DEB=true
     - env: ROS_DISTRO=hydro   USE_DEB=false EXTRA_DEB="ros-hydro-convex-decomposition ros-hydro-ivcon" BUILD_PKGS="jsk_pr2_calibration jsk_robot_startup pr2_base_trajectory_action jsk_pr2_startup jsk_pr2_desktop"
-    - env: ROS_DISTRO=indigo  USE_DEB=false EXTRA_DEB="ros-indigo-convex-decomposition ros-indigo-ivcon"
     - env: ROS_DISTRO=kinetic USE_DEB=true
     - env: ROS_DISTRO=melodic USE_DEB=true
     - env: ROS_DISTRO=melodic USE_DEB=false
