add max_velocity_map which restrict max velocity of the robot based on the position

--- a/jsk_robot_common/jsk_robot_startup/package.xml
+++ b/jsk_robot_common/jsk_robot_startup/package.xml
@@ -14,6 +14,7 @@
   <build_depend>roseus</build_depend>
   <build_depend>diagnostic_msgs</build_depend>
   <build_depend>pr2_mechanism_controllers</build_depend>
+  <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>dynamic_reconfigure</build_depend>
   <build_depend>urdf</build_depend>
