[jsk_fetch_diagnosis] add install command of scripts to CMakeLists.txt

--- a/jsk_fetch_robot/jsk_fetch_diagnosis/CMakeLists.txt
+++ b/jsk_fetch_robot/jsk_fetch_diagnosis/CMakeLists.txt
@@ -27,3 +27,7 @@ generate_messages(
 catkin_package(
 )
 
+install(DIRECTORY scripts
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  USE_SOURCE_PERMISSIONS
+)
