--- a/jsk_fetch_robot/jsk_fetch_diagnosis/package.xml
+++ b/jsk_fetch_robot/jsk_fetch_diagnosis/package.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>jsk_fetch_diagnosis</name>
-  <version>0.0.0</version>
+  <version>1.1.0</version>
   <description>The fetch_diagnosis package</description>
 
-  <maintainer email="shinjo@todo.todo">shinjo</maintainer>
+  <maintainer email="sktometometo@gmail.com">Koki Shinjo</maintainer>
 
-  <license>TODO</license>
+  <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
   <build_depend>message_generation</build_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>std_msgs</build_depend>
 
-  <exec_depend>message_generation</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
   <exec_depend>rospy</exec_depend>
 
   <export>
