--- a/jsk_fetch_robot/jsk_fetch_diagnosis/package.xml
+++ b/jsk_fetch_robot/jsk_fetch_diagnosis/package.xml
@@ -4,7 +4,7 @@
   <version>1.1.0</version>
   <description>The fetch_diagnosis package</description>
 
-  <maintainer email="sktometometo@gmail.com">Koki Shinjo</maintainer>
+  <maintainer email="shinjo@jsk.imi.i.u-tokyo.ac.jp">Koki Shinjo</maintainer>
 
   <license>BSD</license>
 
