--- a/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/safe_teleop_pr2_params.yaml
+++ b/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/safe_teleop_pr2_params.yaml
@@ -1,59 +1,8 @@
-footprint: [[-0.325, -0.325], [-0.325, 0.325], [0.325, 0.325], [0.46, 0.0], [0.325, -0.325]]
-footprint_padding: 0.015
-
-local_costmap:
-  transform_tolerance: 0.2
-  obstacle_range: 2.5
-  raytrace_range: 3.0
-  footprint_clearing_enabled: true
-  global_frame: odom_combined
-  robot_base_frame: base_footprint
-  update_frequency: 5.0
-  publish_frequency: 2.0
-  static_map: false
-  rolling_window: true
-
-  width: 5.0
-  height: 5.0
-  resolution: 0.025
-  origin_x: 0.0
-  origin_y: 0.0
-
-  map_type: voxel
-  obstacle_layer:
-    origin_z: 0.0
-    z_voxels: 16
-    z_resolution: 0.1
-    unknown_cost_value: 0
-    unknown_threshold: 4
-    mark_threshold: 0
-    publish_voxel_map: false
-  inflation_layer:
-    inflation_radius: 0.2
-
-  observation_sources: base_scan_filtered tilt_scan_filtered
-
-  base_scan_filtered:
-    sensor_frame: base_laser_link
-    topic: /base_scan_filtered
-    data_type: PointCloud2
-    expected_update_rate: 0.2
-    observation_persistence: 1.0
-    marking: true
-    clearing: true
-    min_obstacle_height: 0.25
-    max_obstacle_height: 0.35
-    obstacle_range: 5.0
-    raytrace_range: 3.0
+# parameters for obstacle_layer
+obstacle_layer:
   tilt_scan_filtered:
-    sensor_frame: laser_tilt_link
     topic: /tilt_scan_filtered
-    data_type: PointCloud2
-    expected_update_rate: 0.25
-    observation_persistence: 2.5
-    marking: true
-    clearing: true
-    min_obstacle_height: 0.075
-    max_obstacle_height: 2.0
-    obstacle_range: 5.0
-    raytrace_range: 3.0
+# parameters for inflation_layer
+inflation_layer:
+  inflation_radius: 3.0
+  cost_scaling_factor: 3.0
