--- a/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/global_costmap_params.yaml
+++ b/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/global_costmap_params.yaml
@@ -3,7 +3,7 @@ plugins:
   - {name: obstacle_layer, type: "costmap_2d::ObstacleLayer" }
   - {name: inflation_layer,  type: "costmap_2d::InflationLayer" }
 
-footprint: [[-0.34, -0.35], [-0.34, 0.35], [0.34, 0.35], [0.34, -0.35]]
+footprint: [[-0.34, -0.35], [-0.34, 0.35], [0.34, 0.35], [0.4, 0.0], [0.34, -0.35]]
 footprint_padding: 0.1
 
 # copied from pr2_navigation_global/config/global_costmap_params.yaml
