--- a/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/local_costmap_params.yaml
+++ b/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/local_costmap_params.yaml
@@ -11,5 +11,5 @@ width: 5.0 # 3.0
 height: 5.0 # 3.0
 resolution: 0.025 # 0.06
 
-footprint: [[-0.34, -0.35], [-0.34, 0.35], [0.34, 0.35], [0.34, -0.35]]
+footprint: [[-0.34, -0.35], [-0.34, 0.35], [0.34, 0.35], [0.4, 0.0], [0.34, -0.35]]
 footprint_padding: 0.1
