--- a/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/dwa_local_planner.yaml
+++ b/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/dwa_local_planner.yaml
@@ -16,7 +16,7 @@ min_trans_vel: 0.0
 max_rot_vel: 1.0
 min_rot_vel: 0.0
 
-sim_time: 1.7
+sim_time: 1.5
 sim_granularity: 0.025
 angular_sim_granularity: 0.025
 
@@ -32,9 +32,9 @@ forward_point_distance: 0.325
 scaling_speed: 0.25
 max_scaling_factor: 0.2
 
-vx_samples: 3
-vy_samples: 10
-vtheta_samples: 10
+vx_samples: 7
+vy_samples: 7
+vth_samples: 10
 
 xy_goal_tolerance: 0.2
 yaw_goal_tolerance: 0.17
