--- a/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/move_base_params.yaml
+++ b/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/move_base_params.yaml
@@ -1,5 +1,5 @@
 # Oscillation
-oscillation_timeout: 10.0
+oscillation_timeout: 0.0  # infinite because recovery behavior is disabled
 oscillation_distance: 0.5
 
 # Global Planner
