Enable to move in '-x' direction by allowing a little translation while rotating in place

--- a/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/dwa_local_planner.yaml
+++ b/jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/dwa_local_planner.yaml
@@ -1,6 +1,4 @@
-# this file is originally pr2_navigation_config/dwa_local_planner.yaml
-
-acc_lim_th: 3.2
+acc_lim_theta: 5.0
 acc_lim_x: 2.5
 acc_lim_y: 2.5
 
@@ -11,10 +9,13 @@ max_vel_y: 0.3
 min_vel_y: -0.3
 
 max_trans_vel: 0.55
-min_trans_vel: 0.0
+min_trans_vel: 0.1  # For moving in '-x' direction, do not set to 0
 
-max_rot_vel: 1.0
-min_rot_vel: 0.0
+# Limit of max_rot_vel:
+#   max_trans_vel_hardware_spec / distance_from_footprint_origin_to_wheel
+#   = 1.0[m/s] / (0.334 * sqrt(2))[m] = 2.1[rad/s]
+max_rot_vel: 1.7
+min_rot_vel: 0.4  # For moving in '-x' direction, do not set to 0
 
 sim_time: 1.5
 sim_granularity: 0.025
@@ -41,3 +42,5 @@ yaw_goal_tolerance: 0.17
 
 rot_stopped_vel: 0.01
 trans_stopped_vel: 0.01
+
+prune_plan: true
